Hello World Commit

--- a/SRC/package.xml
+++ b/SRC/package.xml
@@ -2,18 +2,24 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
 		<members>DreamWorld</members>
-        <name>ApexClass</name>
+		<members>HelloWorld</members>
+		<name>ApexClass</name>
     </types>
     <types>
 		<members>Dream_World__c.First_Dream__c</members>
+		<members>Hello_World__c.First_Hello_World__c</members>
+        <members>Hello_World__c.Second_Hello_World__c</members>
+        <members>Hello_World__c.Third_Hell_World__c</members>
         <name>CustomField</name>
     </types>
     <types>
 		<members>Dream_World__c</members>
+		<members>Hello_World__c</members>
         <name>CustomObject</name>
     </types>
     <types>
 		<members>Dream_World__c</members>
+		<members>Hello_World__c</members>
         <name>CustomTab</name>
     </types>
     <version>53.0</version>
