--- a/SRC/package.xml
+++ b/SRC/package.xml
@@ -2,19 +2,41 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
 		<members>DreamWorld</members>
+        <members>HelloWorld</members>
+		<members>Register</members>
+        <members>RegisterDebug</members>
+        <members>Teacher</members>
+        <members>TeacherDebug</members>
         <name>ApexClass</name>
     </types>
     <types>
 		<members>Dream_World__c.First_Dream__c</members>
+        <members>Hello_World__c.First_Hello_World__c</members>
+        <members>Hello_World__c.Second_Hello_World__c</members>
+        <members>Hello_World__c.Third_Hell_World__c</members>
         <name>CustomField</name>
     </types>
     <types>
 		<members>Dream_World__c</members>
+        <members>Hello_World__c</members>
+		<members>Student__c</members>
         <name>CustomObject</name>
     </types>
     <types>
 		<members>Dream_World__c</members>
+        <members>Hello_World__c</members>
+		<members>Student__c</members>
         <name>CustomTab</name>
+    </types>
+	<types>
+        <members>Student__c-Registar Layout</members>
+        <members>Student__c-Teacher Layout</members>
+		<name>Layout</name>
+    </types>
+    <types>
+        <members>Student__c.Register_Layout</members>
+        <members>Student__c.Teacher_Layout</members>
+        <name>RecordType</name>
     </types>
     <version>53.0</version>
 </Package>
